src/test/ui/polymorphization/type_parameters/closures.stderr
error: item has unused generic parameters
  --> $DIR/closures.rs:19:19
   |
LL | pub fn unused<T>() -> u32 {
   |               - generic parameter `T` is unused
...
LL |     let add_one = |x: u32| x + 1;
   |                   ^^^^^^^^

error: item has unused generic parameters
  --> $DIR/closures.rs:16:8
   |
LL | pub fn unused<T>() -> u32 {
   |        ^^^^^^ - generic parameter `T` is unused

error: item has unused generic parameters
  --> $DIR/closures.rs:28:19
   |
LL | pub fn used_parent<T: Default>() -> u32 {
   |                    - generic parameter `T` is unused
LL |     let _: T = Default::default();
LL |     let add_one = |x: u32| x + 1;
   |                   ^^^^^^^^

error: item has unused generic parameters
  --> $DIR/closures.rs:84:13
   |
LL | pub fn used_substs<T>() -> u32 {
   |                    - generic parameter `T` is unused
LL |
LL |     let x = || unused::<T>();
   |             ^^

error: item has unused generic parameters
  --> $DIR/closures.rs:82:8
   |
LL | pub fn used_substs<T>() -> u32 {
   |        ^^^^^^^^^^^ - generic parameter `T` is unused

error: item has unused generic parameters
  --> $DIR/closures.rs:96:23
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |     pub fn unused_all<G: Default>() -> u32 {
   |                       - generic parameter `G` is unused
LL |
LL |         let add_one = |x: u32| x + 1;
   |                       ^^^^^^^^

error: item has unused generic parameters
  --> $DIR/closures.rs:94:12
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |     pub fn unused_all<G: Default>() -> u32 {
   |            ^^^^^^^^^^ - generic parameter `G` is unused

error: item has unused generic parameters
  --> $DIR/closures.rs:130:23
   |
LL |     pub fn used_impl<G: Default>() -> u32 {
   |                      - generic parameter `G` is unused
LL |
LL |         let add_one = |x: u32| {
   |                       ^^^^^^^^

error: item has unused generic parameters
  --> $DIR/closures.rs:128:12
   |
LL |     pub fn used_impl<G: Default>() -> u32 {
   |            ^^^^^^^^^ - generic parameter `G` is unused

error: item has unused generic parameters
  --> $DIR/closures.rs:117:23
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |         let add_one = |x: u32| {
   |                       ^^^^^^^^

error: item has unused generic parameters
  --> $DIR/closures.rs:115:12
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |     pub fn used_fn<G: Default>() -> u32 {
   |            ^^^^^^^

error: item has unused generic parameters
  --> $DIR/closures.rs:143:17
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |         let x = || unused::<F>();
   |                 ^^

error: item has unused generic parameters
  --> $DIR/closures.rs:141:12
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |     pub fn used_substs() -> u32 {
   |            ^^^^^^^^^^^

error: aborting due to 13 previous errors

